// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`../useAccessButtonState local dependencies ../useLogout should match the saved hash 1`] = `"2429f4f777a9cdda7e5458baef24e29ad028a2faa3e3ffd6b550493da5a2b062"`;

exports[`../useAccessButtonState local dependencies lib/react/auth0 should match the saved hash 1`] = `"bbf8417bfdf1fb44b53e3f1346ac21073f5d467b7326219107d536250de8502b"`;

exports[`../useAccessButtonState useAccessButtonState (auth0.user {}, closeDashboard is a function) should set up the state 1`] = `
Object {
  "loggedIn": true,
  "login": [Function],
  "logout": Object {},
}
`;

exports[`../useAccessButtonState useAccessButtonState (auth0.user {}, closeDashboard is undefined) should set up the state 1`] = `
Object {
  "loggedIn": true,
  "login": [Function],
  "logout": Object {},
}
`;

exports[`../useAccessButtonState useAccessButtonState (auth0.user null, closeDashboard is a function) should set up the state 1`] = `
Object {
  "loggedIn": false,
  "login": [Function],
  "logout": Object {},
}
`;

exports[`../useAccessButtonState useAccessButtonState (auth0.user null, closeDashboard is undefined) should set up the state 1`] = `
Object {
  "loggedIn": false,
  "login": [Function],
  "logout": Object {},
}
`;
